# efemel

./: .gitignore  Makefile  README.md  debug_test.py  example_before_hooks.py  main.py  performance_test.py  pipeline.py  pyproject.toml  test.py  test_class_hooks.py  test_concurrent_context.py  test_data.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: auto-issues.yml  required-checks.yml
efemel/: __init__.py  cli.py  helpers.py  hooks_manager.py  main.py  pipeline.py  process.py
efemel/hooks/: output_filename.py  process_data.py
efemel/pipeline/: errors.py  helpers.py  pipeline.py
efemel/pipeline/transformers/: parallel.py  transformer.py
efemel/readers/: local.py
efemel/transformers/: json.py
efemel/writers/: __init__.py  local.py  sink.py
test_dir/: config.py
test_dir/subdir/: nested.py
tests/: test_cli.py  test_integration.py  test_laygo.py  test_main.py  test_parallel_transformer.py  test_pipeline.py  test_pipeline_basics.py  test_pipeline_catch.py  test_pipeline_composition.py  test_pipeline_concurrency.py  test_pipeline_context.py  test_pipeline_each.py  test_pipeline_edge_cases.py  test_pipeline_filtering.py  test_pipeline_integration.py  test_pipeline_map_filter.py  test_pipeline_mapping.py  test_pipeline_reduce.py  test_pipeline_tap.py  test_pipeline_utility.py  test_transformer.py
tests/hooks/before_after/: output_filename.py
tests/hooks/multiple/: output_filename.py
tests/inputs/basic/: simple_test.py  test_data.py
tests/inputs/process_data/: data.py
tests/inputs/test_dir/: utils.py
tests/inputs/with_imports/: main.py
tests/inputs_basic/: test_data.py
tests/inputs_with_imports/: main.py
tests/outputs/: simple_test.json  test_data.json
tests/outputs_with_imports/: main.json
tests/params/: params.py
tests_old/: test_pipeline_composition.py  test_pipeline_concurrency.py  test_pipeline_context.py  test_pipeline_edge_cases.py  test_pipeline_filtering.py  test_pipeline_map_filter.py  test_pipeline_tap.py  test_pipeline_utility.py
wiki/: API-Reference.md  Development.md  Home.md  Hooks.md  README.md
(+17 files in other folders)
